--- a/treecko_frontend/src/app/pages/board/board.component.css
+++ b/treecko_frontend/src/app/pages/board/board.component.css
@@ -83,6 +83,50 @@ h2 {
   font-weight: 400;
 }
 
+.task-card input,
+.task-card textarea {
+  width: 90%;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 2px solid #dac2b2;
+  border-radius: 8px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: lighter;
+  font-size: 13px;
+}
+
+.task-card button {
+  width: 45%;
+  padding: 10px 0;
+  margin: 5px;
+  background-color: #81a651;
+  color: white;
+  font-weight: 700;
+  font-family: 'Montserrat', sans-serif;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.task-card button:hover {
+  background-color: #6b8b41;
+}
+
+.task-card .task-actions button {
+  width: auto; 
+  padding: 0;
+  margin: 0;
+  background: none;
+  color: #333;
+  border-radius: 0;
+}
+
+.task-card .task-actions button:hover {
+  background: none;
+}
+
 .task-actions {
   display: flex;
   flex-direction: row;
